[tool.poetry]
name = "sdk-python"
version = "0.1.0"
description = ""
authors = ["Camilo Molano"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = {git = "https://github.com/algorandfoundation/algokit-utils-py"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
